--- a/Self_Portrait/index.html
+++ b/Self_Portrait/index.html
@@ -10,7 +10,7 @@
     <p>This is my Class Website</p>
     <ul>
         <li class="link"><a href="../index.html">Home</a></li>
-        <l
+        <li class="link"><a href="Self_Portrait/index.html">Self Portrait</a></li>
     </ul>
     <script src="p5.min.js"></script>
     <script src="sketch.js"></script>
