--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <p>This is my Class Website</p>
     <ul>
         <li class="link"><a href="../index.html">Home</a></li>
+        <li class="link"><a href="Self_Portrait/index.html">Self Portrait</a></li>
     </ul>
     <script src="p5.min.js">
     </script>
