--- a/Self_Portrait/index.html
+++ b/Self_Portrait/index.html
@@ -6,13 +6,15 @@
     <meta charset="utf-8">
 </head>
 <body id="home">
-    <h1>Self Portrait</h1>
-    <p>This is my Class Website</p>
-    <ul>
-        <li class="link"><a href="../index.html">Home</a></li>
-        <li class="link"><a href="Self_Portrait/index.html">Self Portrait</a></li>
-    </ul>
-    <script src="p5.min.js"></script>
-    <script src="sketch.js"></script>
+    <div id="wrapper"> 
+        <h1>Self Portrait</h1>
+        <p>This is my Class Website</p>
+        <ul>
+            <li class="link"><a href="../index.html">Home</a></li>
+            <li class="link"><a href="Self_Portrait/index.html">Self Portrait</a></li>
+        </ul>
+        <script src="p5.min.js"></script>
+        <script src="sketch.js"></script>
+    </div>
 </body>
 </html>
