--- a/Self_Portrait/self_portrait.html
+++ b/Self_Portrait/self_portrait.html
@@ -7,8 +7,9 @@
 </head>
 <body id="home">
     <div id="wrapper"> 
-        <header></header>
-        
+        <header>
+            <!-- Image goes here -->
+        </header>
         <ul>
             <li class="link"><a href="../index.html">Home</a></li>
             <li class="link"><a href="self_portrait.html">Self Portrait</a></li>
