--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <ul>
                 <li class="link"><a href="index.html">Home</a></li>
                 <li class="link"><a href="Self_Portrait/self_portrait.html">Self Portrait</a></li>
+                <li class="link"><a href="">Assignment 2</a></li>
                 <li class="link"><a href="About_Me/about_me.html">About Me</a></li>
             </ul>
         <div class="text">
@@ -23,7 +24,7 @@
 
             <p>Mauris velit justo, pulvinar vel nulla id, viverra fringilla ligula. Fusce ullamcorper dapibus egestas. Mauris sed convallis orci, nec maximus justo. Maecenas rhoncus iaculis enim sed viverra. Donec quis dui laoreet risus posuere elementum ac nec lacus. Nulla commodo posuere turpis quis bibendum. Fusce aliquam ipsum in arcu ullamcorper, tempus semper metus suscipit.</p>
 
-            <p>Much better.</p>
+            
         </div>
         <script src="p5.min.js">
         </script>
