--- a/About_Me/about_me.html
+++ b/About_Me/about_me.html
@@ -13,15 +13,14 @@
             <ul>
                 <li class="link"><a href="../index.html">Home</a></li>
                 <li class="link"><a href="../Self_Portrait/self_portrait.html">Self Portrait</a></li>
+                <li class="link"><a href="">Assignment 2</a></li>
                 <li class="link"><a href="about_me.html">About Me</a></li>
             </ul>
         <div class="text">
             <h1></h1>
             <p>Welcome to MMP 210!</p>
             <p>idk what to put about myself yet so have a picture of my dog wearing glasses in the meantime.</p>
-            
             <p><img src="img/cornbread_glasses.jpg" </p>
-            
             <p>Much better.</p>
         </div>
         <script src="p5.min.js">
