--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>MMP 210 Homepage</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
     <meta charset="utf-8">
+    
+    <!--Tab icon-->
+    <link rel="icon" type="image/png" href="img/cornbread.png">
+
 </head>
 <body id="home">
     <div id="wrapper">
@@ -13,7 +17,7 @@
             <ul>
                 <li class="link"><a href="index.html">Home</a></li>
                 <li class="link"><a href="Self_Portrait/self_portrait.html">Self Portrait</a></li>
-                <li class="link"><a href="">Assignment 2</a></li>
+                <li class="link"><a href="Assignment_2/Assignment_2.html">Assignment 2</a></li>
                 <li class="link"><a href="About_Me/about_me.html">About Me</a></li>
             </ul>
         <div class="text">
