--- a/Assignment_2/Assignment_2.html
+++ b/Assignment_2/Assignment_2.html
@@ -17,7 +17,7 @@
         <ul>
                 <li class="link"><a href="../index.html">Home</a></li>
                 <li class="link"><a href="../Self_Portrait/self_portrait.html">Self Portrait</a></li>
-                <li class="link"><a href="/Assignment_2/Assignment_2.html">Assignment 2</a></li>
+                <li class="link"><a href="Assignment_2.html">Assignment 2</a></li>
                 <li class="link"><a href="../About_Me/about_me.html">About Me</a></li>
         </ul>
         <div class="text">
