--- a/About_Me/about_me.html
+++ b/About_Me/about_me.html
@@ -12,7 +12,7 @@
 <body id="home">
     <div id="wrapper">
         <header>
-            <!-- Image goes here -->
+            <h1>Welcome to MMP 210</h1>
         </header>
             <ul>
                 <li class="link"><a href="../index.html">Home</a></li>
