--- a/index.html
+++ b/index.html
@@ -5,21 +5,35 @@
     <link rel="stylesheet" href="styles.css" type="text/css">
     <meta charset="utf-8">
     
+   
+
     <!--Tab icon-->
     <link rel="icon" type="image/png" href="img/cornbread.png">
+
+
+
+
+
 
 </head>
 <body id="home">
     <div id="wrapper">
         <header>
-            <!-- Image goes here -->
+            <h1>Welcome to MMP 210</h1>
         </header>
-            <ul>
-                <li class="link"><a href="index.html">Home</a></li>
-                <li class="link"><a href="Self_Portrait/self_portrait.html">Self Portrait</a></li>
-                <li class="link"><a href="Assignment_2/Assignment_2.html">Assignment 2</a></li>
-                <li class="link"><a href="About_Me/about_me.html">About Me</a></li>
-            </ul>
+
+            <div class="animsition">
+                <ul>
+                    <li class="link"><a href="index.html">Home</a></li>
+                    <li class="link"><a href="Self_Portrait/self_portrait.html" class="animsition-link">Self Portrait</a></li>
+                    <li class="link"><a href="Assignment_2/Assignment_2.html">Assignment 2</a></li>
+                    <li class="link"><a href="About_Me/about_me.html">About Me</a></li>
+                </ul>
+            </div>
+
+
+
+
         <div class="text">
             <h1></h1>
             <p>Welcome to MMP 210!</p>
