--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 
-	<title>Portfolio</title>
+	<title>MMP 210 Homepage</title>
 	<link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
 	<link href="animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
