--- a/Assignments/Assignment1/self_portrait.html
+++ b/Assignments/Assignment1/self_portrait.html
@@ -45,7 +45,7 @@
 							</li>
 
 							<li>
-								<a class="animsition-link" href="../../About_Me/about_me.html">About</a>
+								<a class="animsition-link" href="../../About/about.html">About</a>
 							</li>
 
 
