--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -41,7 +41,7 @@
 
 
 							<li>
-								<a class="animsition-link" href="About/about.html">About</a>
+								<a class="animsition-link" href="../About/about.html">About</a>
 							</li>
 
 						</ul>
@@ -53,10 +53,10 @@
 			<h2>Assignments</h2>
 
             <!-- Caption when hovering over image -->
-
+            
 			<div class="container-fluid assignment-container" id="assignments">
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment1/self_portrait.html"><img alt="Assignment 1" src="img/assignment2.png"> <span class="caption">Assignment #1<br>
+					<a href="Assignment1/self_portrait.html"><img alt="Assignment 1" src="img/assignment1.png"> <span class="caption">Assignment #1<br>
 					<b>Self Portrait</b></span></a>
 				</div>
 
@@ -68,13 +68,20 @@
 
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment1.png"> <span class="caption">Assignment #3<br>
+					<a href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment3.png"> <span class="caption">Assignment #3<br>
 					<b>Logo</b></span></a>
+                </div>
 
-				</div>
+
+				<div class="col-sm-6 assignment-hover">
+					<a href="Assignment4/Assignment_4.html"><img alt="Assignment 4" src="img/assignment2.png"> <span class="caption">Assignment #4<br>
+					<b>Interactive Design</b></span></a>
+                </div>
+
+
 			</div>
-		</div>
-	</div><!-- /.container -->
+		</div><!-- /.container -->
+	</div>
 
 
 	<div class="footer">
