--- a/index.html
+++ b/index.html
@@ -4,36 +4,32 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
+	<meta content="width=device-width, initial-scale=1" name="viewport">
 
 	<title>MMP 210 Homepage</title>
+
 	<link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
 	<link href="animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
-	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
+	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
 </head>
-
 <body>
+
 	<header>
 		<h1>Welcome to MMP 210</h1>
 	</header>
-
 
 	<div class="animsition">
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
-					<!-- Brand and toggle get grouped for better mobile display -->
-
-
 					<div class="navbar-header">
+
 						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
+
 					</div><!-- Navbar Header-->
-
-					<!-- Collect the nav links, forms, and other content for toggling -->
-
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
+
 							<li class="active">
 								<a class="animsition-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 							</li>
@@ -43,90 +39,106 @@
 								<a class="animsition-link" href="Assignments/assignments.html">Assignments</a>
 							</li>
 
+
 							<li>
 								<a class="animsition-link" href="About/about.html">About</a>
 							</li>
 
-
-
-
 						</ul>
 					</div><!-- /.navbar-collapse -->
-
 				</div><!-- /.container-fluid -->
 			</nav>
 
-
 			<h2>Home</h2>
 
+			<div class="carousel slide" data-ride="carousel" id="featured-work">
+				
+				<ol class="carousel-indicators">
 
-			
-<div id="featured-work" class="carousel slide" data-ride="carousel">
-  <!-- Indicators -->
-  <ol class="carousel-indicators">
-    <li data-target="#featured-work" data-slide-to="0" class="active"></li>
-    <li data-target="#featured-work" data-slide-to="1"></li>
-    <li data-target="#featured-work" data-slide-to="2"></li>
-  </ol>
-
-  <!-- Wrapper for slides -->
-  <div class="carousel-inner" role="listbox">
-    <div class="item active">
-      <img src="img/assignment2.png" alt="...">
-      <div class="carousel-caption">
-      </div>
-    </div>
-    <div class="item">
-      <img src="img/assignment2.png" alt="...">
-      <div class="carousel-caption">
-      </div>
-    </div>
-    <div class="item">
-      <img src="img/assignment2.png" alt="...">
-      <div class="carousel-caption">
-          <h3 class="carousel-header">okok</h3>
-          <p class="carousel-text">okok</p>
-      </div>
-    </div>
-
-  </div>
-
-  <!-- Controls -->
-  <a class="left carousel-control" href="#featured-work" role="button" data-slide="prev">
-    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="right carousel-control" href="#featured-work" role="button" data-slide="next">
-    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div>
+					<li class="active" data-slide-to="0" data-target="#featured-work"></li>
 
 
-            <div class="text">
+					<li data-slide-to="1" data-target="#featured-work"></li>
 
-        <h3>Welcome to My Class Website</h3>
-        <p>This website will be used to post my assignments for my class MMP 210</p>
-        <p>Now for some dummy text</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a sapien at dui ultrices euismod. In bibendum sem ac purus luctus, in semper lacus euismod. Nunc arcu risus, ultricies quis felis quis, tempus commodo odio. In eget congue risus. Vivamus sit amet nibh consectetur, varius est sit amet, condimentum libero. Sed consectetur tempus eros, bibendum eleifend sem scelerisque vel. Mauris libero purus, accumsan sit amet venenatis at, interdum sed libero. Aliquam erat volutpat. Vivamus fermentum dolor orci, ac congue nulla aliquam non. Curabitur metus est, sollicitudin eu magna et, efficitur cursus mauris. Maecenas mollis sem nunc, at auctor metus dapibus in. Donec aliquet rutrum magna vitae consectetur. Morbi tempus sem in mauris efficitur porttitor. Nulla auctor vel quam sit amet tempus. In nec efficitur ligula. Phasellus nec diam ut purus pharetra mollis sed quis augue.</p>
 
+					<li data-slide-to="2" data-target="#featured-work"></li>
+
+
+					<li data-slide-to="3" data-target="#featured-work"></li>
+
+				</ol>
+
+				<div class="carousel-inner" role="listbox">
+					<div class="item active"><!-- Slide 1 -->
+						<img alt="..." src="img/assignment1.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #1</h3>
+
+							<p class="carousel-text">Self Portrait</p>
+						</div>
+					</div>
+
+
+					<div class="item"><!-- Slide 2 -->
+						<img alt="..." src="img/assignment2.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #2</h3>
+
+							<p class="carousel-text">Variables</p>
+						</div>
+					</div>
+
+
+					<div class="item"><!-- Slide 3 -->
+						<img alt="..." src="img/assignment3.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #3</h3>
+
+							<p class="carousel-text">Logo</p>
+						</div>
+					</div>
+
+
+					<div class="item"><!-- Slide 4 -->
+						<img alt="..." src="img/assignment2.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #4</h3>
+
+							<p class="carousel-text">Interactive Design</p>
+						</div>
+					</div>
+				</div>
+				<!-- Controls -->
+				 <a class="left carousel-control" data-slide="prev" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span></a> <a class="right carousel-control" data-slide="next" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span></a>
+			</div>
+
+
+			<div class="text">
+				<h3>Welcome to My Class Website</h3>
+
+
+				<p>This website will be used to post my assignments for my class MMP 210</p>
+
+
+				<p>Now for some dummy text</p>
+
+
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a sapien at dui ultrices euismod. In bibendum sem ac purus luctus, in semper lacus euismod. Nunc arcu risus, ultricies quis felis quis, tempus commodo odio. In eget congue risus. Vivamus sit amet nibh consectetur, varius est sit amet, condimentum libero. Sed consectetur tempus eros, bibendum eleifend sem scelerisque vel. Mauris libero purus, accumsan sit amet venenatis at, interdum sed libero. Aliquam erat volutpat. Vivamus fermentum dolor orci, ac congue nulla aliquam non. Curabitur metus est, sollicitudin eu magna et, efficitur cursus mauris. Maecenas mollis sem nunc, at auctor metus dapibus in. Donec aliquet rutrum magna vitae consectetur. Morbi tempus sem in mauris efficitur porttitor. Nulla auctor vel quam sit amet tempus. In nec efficitur ligula. Phasellus nec diam ut purus pharetra mollis sed quis augue.</p>
 
 			</div><!-- Text Ends Here -->
-
-
-
-
 		</div><!-- /.container -->
 
-        <div class="footer">
-            <footer class="footer">
-                <div class="container">
-                    <p class="text-muted">Designed by Jose &copy; 2017</p>
-                </div>
-            </footer>
-        </div>
-
-
+		<div class="footer">
+			<footer class="footer">
+				<div class="container">
+					<p class="text-muted">Designed by Jose &copy; 2017</p>
+				</div>
+			</footer>
+		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
 		<script src="Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
 		<script src="animsition/js/animsition.min.js"></script><!-- Animsition js --> 
