--- a/About/about.html
+++ b/About/about.html
@@ -55,6 +55,8 @@
 
 				<p>Hey there! The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do since I always put a lot of time and effort into it! I also do web designs which is something I enjoy learning. On my free time, I usually spend it playing on my PS4. I'm currently replaying Kingdom Hearts Re: Chain of Memories, and I have fallen in love with it's battle system. Feel free to contact me anytime throughout this semester if you need help with the class homework or any opinions of your work.</p>
 
+                <p>Also, I know there are some typos here and there. I'm usually up until 4am messing around with the design of the page. Please don't roast me.</p>
+
 			</div><!-- /.text -->
 		</div><!-- /.container -->
 		<div class="footer">
