--- a/Assignments/Assignment1/self_portrait.html
+++ b/Assignments/Assignment1/self_portrait.html
@@ -58,7 +58,7 @@
 			</nav>
 
 
-			<h2>Assignment 2</h2>
+			<h2>Assignment 1: Self Portrait</h2>
 
 
 			<div class="text">
@@ -74,6 +74,7 @@
         <p>For this assignment, I had to make a self portrait using p5. First thing that came to mind was the book "The Flowers of evil" and thought about how my self portrait could be about me holding the book. The process of the self portrait was easy, the only thing I had problems with was getting the hair right and how to rotate an arc or a rectangle.</p>
             
 
+                <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
 
