--- a/Assignments/Assignment3/Assignment_3.html
+++ b/Assignments/Assignment3/Assignment_3.html
@@ -58,7 +58,7 @@
 			</nav>
 
 
-			<h2>Assignment 3</h2>
+			<h2>Assignment 3: Logo</h2>
 
 
 			<div class="text">
@@ -67,7 +67,7 @@
 				</div><!-- Sketch Holder Ends Here -->
 
 
-	
+	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 
 			</div><!-- Text Ends Here -->
