--- a/Assignments/Assignment2/Assignment_2.html
+++ b/Assignments/Assignment2/Assignment_2.html
@@ -57,7 +57,7 @@
 			</nav>
 
 
-			<h2>Assignment 2</h2>
+			<h2>Assignment 2: Variables</h2>
 
 
 			<div class="text">
@@ -84,6 +84,9 @@
 					<div class="col-md-4 col-md-6"><img alt="Sora CoM" class="img-responsive" src="img/sora_com.gif">
 					</div>
 				</div>
+
+               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
+                
 			</div><!-- Text Ends Here -->
 
 
