--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -78,6 +78,10 @@
 					<b>Interactive Design</b></span></a>
                 </div>
 
+				<div class="col-sm-6 assignment-hover">
+					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 4" src="img/assignment2.png"> <span class="caption">Assignment #5<br>
+					<b>Drawing With Logic</b></span></a>
+                </div>
 
 			</div>
 		</div><!-- /.container -->
