--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -79,8 +79,13 @@
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 4" src="img/assignment5.png"> <span class="caption">Assignment #5<br>
+					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 5" src="img/assignment5.png"> <span class="caption">Assignment #5<br>
 					<b>Drawing With Logic</b></span></a>
+                </div>
+
+				<div class="col-sm-6 assignment-hover">
+					<a href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment6.png"> <span class="caption">Assignment #6<br>
+					<b>Animation</b></span></a>
                 </div>
 
 			</div>
