--- a/Assignments/Assignment2/Assignment_2.html
+++ b/Assignments/Assignment2/Assignment_2.html
@@ -3,11 +3,14 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-
+	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
 	<link href="../../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+
 	<link href="../../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
 </head>
@@ -22,14 +25,9 @@
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
-					<!-- Brand and toggle get grouped for better mobile display -->
-
-
 					<div class="navbar-header">
 						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 					</div><!-- Navbar Header-->
-
-					<!-- Collect the nav links, forms, and other content for toggling -->
 
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
@@ -47,12 +45,8 @@
 								<a class="animsition-link" href="../../About/about.html">About</a>
 							</li>
 
-
-
-
 						</ul>
 					</div><!-- /.navbar-collapse -->
-
 				</div><!-- /.container-fluid -->
 			</nav>
 
@@ -62,24 +56,21 @@
 
 			<div class="text">
 				<div id="sketch-holder">
-					<!-- Sketch goes in here -->
-				</div><!-- Sketch Holder Ends Here -->
 
+					<!-- Sketch goes in here -->
+
+				</div><!-- Sketch Holder Ends Here -->
 
 				<h2>Description</h2>
 
-
 				<p>For this assignment we had to do another drawing in sketch. Instead of a Self Portrait, the class had to pick a favorie activity and to use that for the assignment. We also had to use variables instead to get used to on how Javascript works. I decided to go with video games being my favorite activity.</p>
 
-
 				<h2>Process</h2>
-
 
 				<div class="row">
 					<div class="col-md-6">
 						<p class="leftside-text">The first thing my classmates pointed out when seeing this assignment was the pixle art on the tv. They ask if I have used an image or have found a code for it online and pasted it onto my code. The answer to that is no, I did not those neither of those two. I looked up an image online for the character and used it as reference. I counted the pixles from top to bottom and little by little got the head to come out just like in the picture. I also get asked if it was simple and easy, but it was neautral. You need the patience to get the pixles onto the right spot and not mess up one pixle.</p>
 					</div>
-
 
 					<div class="col-md-4 col-md-6"><img alt="Sora CoM" class="img-responsive" src="img/sora_com.gif">
 					</div>
@@ -88,9 +79,6 @@
                <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
                 
 			</div><!-- Text Ends Here -->
-
-
-
 
 		</div><!-- /.container -->
 
