--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-
 	<title>MMP 210 Homepage</title>
 	<link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+
 	<link href="../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
 </head>
-
 <body>
 	<header>
 		<h1>Welcome to MMP 210</h1>
 	</header>
-
-
 	<div class="animsition">
 		<div class="container">
 			<nav class="navbar navbar-default">
@@ -26,7 +26,6 @@
 						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 					</div><!-- Navbar Header-->
 
-
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 
@@ -34,11 +33,9 @@
 								<a class="animsition-link" href="../index.html">Home</a>
 							</li>
 
-
 							<li class="active">
 								<a class="animsition-link" href="assignments.html">Assignments<span class="sr-only">(current)</span></a>
 							</li>
-
 
 							<li>
 								<a class="animsition-link" href="../About/about.html">About</a>
@@ -48,7 +45,6 @@
 					</div><!-- /.navbar-collapse -->
 				</div><!-- /.container-fluid -->
 			</nav>
-
 
 			<h2>Assignments</h2>
 
@@ -80,7 +76,7 @@
 
 				<div class="col-sm-6 assignment-hover">
 					<a href="Assignment5/Assignment_5.html"><img alt="Assignment 5" src="img/assignment5.png"> <span class="caption">Assignment #5<br>
-					<b>Drawing With Logic</b></span></a>
+					<b>Logic</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
@@ -88,11 +84,14 @@
 					<b>Animation</b></span></a>
                 </div>
 
+				<div class="col-sm-6 assignment-hover">
+					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment2.png"> <span class="caption">Assignment #7<br>
+					<b>Loops</b></span></a>
+                </div>
+
 			</div>
 		</div><!-- /.container -->
 	</div>
-
-
 	<div class="footer">
 		<footer class="footer">
 			<div class="container">
@@ -100,16 +99,9 @@
 			</div>
 		</footer>
 	</div>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js">
-	</script><!-- jQuery -->
-	 
-	<script src="../Bootstrap/js/bootstrap.min.js">
-	</script><!-- Bootstrap js -->
-	 
-	<script src="../animsition/js/animsition.min.js">
-	</script><!-- Animsition js --> 
-	<script src="../animsition/js/fade.js">
-	</script><!-- Calls Fade Animsition -->
-	 
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
+	<script src="../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
+	<script src="../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
+	<script src="../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
 </body>
 </html>
