--- a/About/about.html
+++ b/About/about.html
@@ -8,6 +8,11 @@
 	<title>MMP 210 Homepage</title>
 
 	<link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+
 	<link href="../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
 </head>
@@ -60,13 +65,11 @@
 			</div><!-- /.text -->
 		</div><!-- /.container -->
 		<div class="footer">
-
 			<footer class="footer">
 				<div class="container">
 					<p class="text-muted">Designed by Jose &copy; 2017</p>
 				</div>
 			</footer>
-
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
 		<script src="../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
