--- a/Assignments/Assignment5/Assignment_5.html
+++ b/Assignments/Assignment5/Assignment_5.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
-	<meta content="width=device-width, initial-scale=1" name="viewport"><!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-
-
+	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
 	<link href="../../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+
 	<link href="../../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
 </head>
@@ -18,20 +19,13 @@
 		<h1>Welcome to MMP 210</h1>
 	</header>
 
-
 	<div class="animsition">
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
-					<!-- Brand and toggle get grouped for better mobile display -->
-
-
 					<div class="navbar-header">
 						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 					</div><!-- Navbar Header-->
-
-					<!-- Collect the nav links, forms, and other content for toggling -->
-
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 
@@ -48,35 +42,24 @@
 								<a class="animsition-link" href="../../About/about.html">About</a>
 							</li>
 
-
-
-
 						</ul>
 					</div><!-- /.navbar-collapse -->
-
 				</div><!-- /.container-fluid -->
 			</nav>
 
-
 			<h2>Assignment 5: Drawing With Logic</h2>
-
 
 			<div class="text">
 				<div id="sketch-holder">
-					<!-- Sketch goes in here -->
-				</div><!-- Sketch Holder Ends Here -->
 
+					<!-- Sketch goes in here -->
+
+				</div><!-- Sketch Holder Ends Here -->
 
 	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
-
 			</div><!-- Text Ends Here -->
-
-
-
-
 		</div><!-- /.container -->
-
         <div class="footer">
             <footer class="footer">
                 <div class="container">
@@ -84,7 +67,6 @@
                 </div>
             </footer>
         </div>
-
         <script src="js/p5.min.js"></script><!-- For Sketch -->
         <script src="js/sketch.js"></script> <!-- Sketch -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
