--- a/Assignments/Assignment7/Assignment_7.html
+++ b/Assignments/Assignment7/Assignment_7.html
@@ -6,7 +6,7 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
 	<link href="../../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
-    
+
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
@@ -24,16 +24,17 @@
 		<div class="container">
 			<nav class="navbar navbar-default">
 				<div class="container-fluid">
-
 					<div class="navbar-header">
 						<button aria-expanded="false" class="navbar-toggle collapsed" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button"><span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span></button>
 					</div><!-- Navbar Header-->
+
 					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 						<ul class="nav navbar-nav">
 
 							<li>
 								<a class="animsition-link" href="../../index.html">Home</a>
 							</li>
+
 
 							<li class="active">
 								<a class="animsition-link" href="../assignments.html">Assignments<span class="sr-only">(current)</span></a>
@@ -48,7 +49,7 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-			<h2>Assignment 4: Interactive Design</h2>
+			<h2>Assignment 7: Loops</h2>
 
 			<div class="text">
 				<div id="sketch-holder">
