--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-
 <html lang="en">
 <head>
 	<meta charset="utf-8">
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
-
 	<title>MMP 210 Homepage</title>
-
 	<link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+
 	<link href="animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
 </head>
@@ -34,11 +36,9 @@
 								<a class="animsition-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 							</li>
 
-
 							<li>
 								<a class="animsition-link" href="Assignments/assignments.html">Assignments</a>
 							</li>
-
 
 							<li>
 								<a class="animsition-link" href="About/about.html">About</a>
@@ -116,16 +116,12 @@
 				 <a class="left carousel-control" data-slide="prev" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span></a> <a class="right carousel-control" data-slide="next" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span></a>
 			</div>
 
-
 			<div class="text">
 				<h3>Welcome to My Class Website</h3>
 
-
 				<p>This website will be used to post my assignments for my class MMP 210</p>
 
-
 				<p>Now for some dummy text</p>
-
 
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a sapien at dui ultrices euismod. In bibendum sem ac purus luctus, in semper lacus euismod. Nunc arcu risus, ultricies quis felis quis, tempus commodo odio. In eget congue risus. Vivamus sit amet nibh consectetur, varius est sit amet, condimentum libero. Sed consectetur tempus eros, bibendum eleifend sem scelerisque vel. Mauris libero purus, accumsan sit amet venenatis at, interdum sed libero. Aliquam erat volutpat. Vivamus fermentum dolor orci, ac congue nulla aliquam non. Curabitur metus est, sollicitudin eu magna et, efficitur cursus mauris. Maecenas mollis sem nunc, at auctor metus dapibus in. Donec aliquet rutrum magna vitae consectetur. Morbi tempus sem in mauris efficitur porttitor. Nulla auctor vel quam sit amet tempus. In nec efficitur ligula. Phasellus nec diam ut purus pharetra mollis sed quis augue.</p>
 
