--- a/About/about.html
+++ b/About/about.html
@@ -38,11 +38,9 @@
 								<a class="animsition-link" href="../index.html">Home</a>
 							</li>
 
-
 							<li>
 								<a class="animsition-link" href="../Assignments/assignments.html">Assignments<span class="sr-only">(current)</span></a>
 							</li>
-
 
 							<li class="active">
 								<a class="animsition-link" href="about.html">About</a>
@@ -58,7 +56,9 @@
 			<div class="text">
 				<img src="img/temp.jpg">
 
-				<p>Hey there! The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do since I always put a lot of time and effort into it! I also do web designs which is something I enjoy learning. On my free time, I usually spend it playing on my PS4. I'm currently replaying Kingdom Hearts Re: Chain of Memories, and I have fallen in love with it's battle system. Feel free to contact me anytime throughout this semester if you need help with the class homework or any opinions of your work.</p>
+                <p>The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do since I always put a lot of time and effort into it! I also do web designing which I enjoy learning. I usually spend my free time walking my dog and playing on my PS4. I'm currently replaying Resident Evil 0 and I have forgotten how amazingly creepy the areas in the game are. I love it when video games make you feel uncomfortable when you are in a room where you are supposed to feel safe in and no enemies are around.</p>
+
+                <p>Feel free to contact me anytime throughout this semester if you need help with the class homework or any opinions of your work.</p>
 
                 <p>Also, I know there are some typos here and there. I'm usually up until 4am messing around with the design of the page. Please don't roast me.</p>
 
