--- a/About/about.html
+++ b/About/about.html
@@ -58,7 +58,7 @@
 
                 <p>The name's Jose, a Graphic Designer from New York City. I'm currently attending Borough of Manhattan Community College making my way towards a degree in Multimedia Arts. I am passionate about the work I do since I always put a lot of time and effort into it! I also do web designing which I enjoy learning. I usually spend my free time walking my dog and playing on my PS4. I'm currently replaying Resident Evil 0 and I have forgotten how amazingly creepy the areas in the game are. I love it when video games make you feel uncomfortable when you are in a room where you are supposed to feel safe in and no enemies are around.</p>
 
-                <p>Feel free to contact me anytime throughout this semester if you need help with the class homework or any opinions of your work.</p>
+                <p>Feel free to contact me anytime on the class Slack channel throughout this semester if you need help with the class homework or any opinions of your work.</p>
 
                 <p>Also, I know there are some typos here and there. I'm usually up until 4am messing around with the design of the page. Please don't roast me.</p>
 
