--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -85,8 +85,13 @@
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment2.png"> <span class="caption">Assignment #7<br>
+					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment7.png"> <span class="caption">Assignment #7<br>
 					<b>Loops</b></span></a>
+                </div>
+
+				<div class="col-sm-6 assignment-hover">
+					<a href="Midterm/Midterm.html"><img alt="Midterm" src="img/midterm.png"> <span class="caption">Midterm<br>
+					<b>Generative Design</b></span></a>
                 </div>
 
 			</div>
