--- a/Assignments/Midterm/Midterm.html
+++ b/Assignments/Midterm/Midterm.html
@@ -61,7 +61,7 @@
 
                 <h2>Description</h2>
 
-                <p>My theme is on Christmas and I'm designing a pattern for a Christmas gift Wrapper. I’m going for a basic pattern showing things that involve Christmas. I’m using green for the background, I'm thinking about making the shade of green change everytime the user clicks the mouse. I will use a variety of colors on the Christmas items that will also change when the user clicks. Except for the snowman, I want to try to add a hat on it and make it random.</p>
+                <p>My theme is on Christmas and I'm designing a pattern for a Christmas gift wrapper. I’m going for a basic pattern showing items that involve Christmas such as a Christmas tree ornament, a ginger bread man head, a present and a snowman. I used green for the background to give it a Christmas vibe and used a variety of colors on the Christmas items that will also change whenever the user clicks.</p>
 
                 
 
