Finished Midterm, made all p5 Sketches responsive

--- a/Assignments/Assignment4/Assignment_4.html
+++ b/Assignments/Assignment4/Assignment_4.html
@@ -76,5 +76,11 @@
 		<script src="../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
 		<script src="../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
 	</div>
+    <!-- Responsive Sketch -->
+    <script type="text/javascript">
+        window.onload = () => {
+            document.querySelector('#defaultCanvas0').removeAttribute('style');
+        }
+    </script>
 </body>
 </html>
