--- a/Assignments/Midterm/Midterm.html
+++ b/Assignments/Midterm/Midterm.html
@@ -53,19 +53,14 @@
 
 			<div class="text">
 				<div id="sketch-holder">
-
 					<!-- Sketch goes in here -->
-
 				</div><!-- Sketch Holder Ends Here -->
-
 
                 <h2>Description</h2>
 
                 <p>My theme is on Christmas and I'm designing a pattern for a Christmas gift wrapper. I’m going for a basic pattern showing items that involve Christmas such as a Christmas tree ornament, a ginger bread man head, a present and a snowman. I used green for the background to give it a Christmas vibe and used a variety of colors on the Christmas items that will also change whenever the user clicks.</p>
 
-                
-
-	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
+                <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
 		</div><!-- /.container -->
@@ -84,5 +79,11 @@
 		<script src="../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
 		<script src="../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
 	</div>
+    <!-- Responsive Sketch -->
+    <script type="text/javascript">
+        window.onload = () => {
+            document.querySelector('#defaultCanvas0').removeAttribute('style');
+        }
+    </script>
 </body>
 </html>
