--- a/Assignments/Assignment1/self_portrait.html
+++ b/Assignments/Assignment1/self_portrait.html
@@ -53,9 +53,7 @@
 
 			<div class="text">
 				<div id="sketch-holder">
-
 					<!-- Sketch goes in here -->
-
 				</div><!-- Sketch Holder Ends Here -->
 
 				<h2>Description</h2>
@@ -82,5 +80,11 @@
 		<script src="../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
 		<script src="../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
 	</div>
+    <!-- Responsive Sketch -->
+    <script type="text/javascript">
+        window.onload = () => {
+            document.querySelector('#defaultCanvas0').removeAttribute('style');
+        }
+    </script>
 </body>
 </html>
