Added descriptions on assignments

--- a/Assignments/Assignment1/self_portrait.html
+++ b/Assignments/Assignment1/self_portrait.html
@@ -58,7 +58,9 @@
 
 				<h2>Description</h2>
 
-                <p>For this assignment, I had to make a self portrait using p5. First thing that came to mind was the book "The Flowers of evil" and thought about how my self portrait could be about me holding the book. The process of the self portrait was easy, the only thing I had problems with was getting the hair right and how to rotate an arc or a rectangle.</p>
+                <p>For this assignment, I had to make a self portrait using p5. First thing that came to mind was the book "The Flowers of Evil" and thought about how I can show myself holding the book as my self portrait. The process was easy, the only thing I had problems with was getting the hair right and how to rotate an arc or a rectangle. I was going to add the picture below of one of my favorite volumes instead of making the book out of ellipses and rects, but at the time I had no idea on how I can make it happen.</p>
+
+                <img src="img/flowers_7.jpg">
             
                 <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
