--- a/Assignments/Assignment2/Assignment_2.html
+++ b/Assignments/Assignment2/Assignment_2.html
@@ -63,13 +63,12 @@
 
 				<h2>Description</h2>
 
-				<p>For this assignment we had to do another drawing in sketch. Instead of a Self Portrait, the class had to pick a favorie activity and to use that for the assignment. We also had to use variables instead to get used to on how Javascript works. I decided to go with video games being my favorite activity.</p>
+				<p>For this assignment we had to do our self portrait again but this time using variables. I decided to pick one of my favorite activities to use for the assignment instead. My favorite activity involved playing video games. We had to use variables this time instead of hardcoded values to get used to on how p5 Javascript works.</p>
 
-				<h2>Process</h2>
 
 				<div class="row">
 					<div class="col-md-6">
-						<p class="leftside-text">The first thing my classmates pointed out when seeing this assignment was the pixle art on the tv. They ask if I have used an image or have found a code for it online and pasted it onto my code. The answer to that is no, I did not those neither of those two. I looked up an image online for the character and used it as reference. I counted the pixles from top to bottom and little by little got the head to come out just like in the picture. I also get asked if it was simple and easy, but it was neautral. You need the patience to get the pixles onto the right spot and not mess up one pixle.</p>
+						<p class="leftside-text">The first thing my friends pointed out when seeing this assignment was the pixel art on the TV. I was questioned about it if I used an image or found a code to it online and pasted it onto my sketch. I did the image with just rects and used the image on the side as reference, I didn't do the full character since it would have taken me a while to finish.  As for the the library of games, I used my PS4, my games and TV as reference and made them with rects, an ellipse and a quad. Since I wanted to put in text on the spine of the games, I went ahead and learned how to use the text and rotate function to make the assignment look like the way I wanted it to look. Out of everything on this sketch, the pixel art took me the longest to do.</p>
 					</div>
 
 					<div class="col-md-4 col-md-6"><img alt="Sora CoM" class="img-responsive" src="img/sora_com.gif">
