--- a/Assignments/Assignment3/Assignment_3.html
+++ b/Assignments/Assignment3/Assignment_3.html
@@ -56,6 +56,10 @@
 					<!-- Sketch goes in here -->
 				</div><!-- Sketch Holder Ends Here -->
 
+                <h2>Description</h2>
+                <p>For this assignment, we had to make a logo that involves our name in p5. It was a simple yet fun assignment, first I sketched out how I wanted to logo to look like while having rect and ellipses in mind to know that it is possible to do. I thought of simple shapes that would allow me to put my initials in the middle. The initials was a bit complicated to do since I was not that good at using the rotate function but I managed.</p>
+
+
 	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
