--- a/Assignments/Assignment4/Assignment_4.html
+++ b/Assignments/Assignment4/Assignment_4.html
@@ -57,6 +57,9 @@
 
 				</div><!-- Sketch Holder Ends Here -->
 
+                <h2>Description</h2>
+                <p>For this assignment, we had to make a a simple interaction for the user. I went with making a maze. A simple interaction yet so much rects on screen when I could of made my life easier by using lines instead. I will be working on this outside of class to prevent the line from going through the maze lines just for the fun of it. </p>
+
 	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
