--- a/Assignments/Assignment5/Assignment_5.html
+++ b/Assignments/Assignment5/Assignment_5.html
@@ -56,6 +56,12 @@
 
 				</div><!-- Sketch Holder Ends Here -->
 
+                <h2>Description</h2>
+                
+                <p>For this assignment, we had to create a design that splits the screen in half or quadrants and is able to be interactive to the user. First thing that came to mind was to make a character select screen. I decided to use characters from Final Fantasy. The characters are known as classes in the game, I chose the Warrior of Light, a White Mage, a Red Mage and a Black mage for the assignment. I made the characters with rects and used the picture below as reference to make the characters look like the ones in game.</p>
+                
+                <img src="img/finalfantasy_reference.png">
+
 	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
