--- a/Assignments/Assignment6/Assignment_6.html
+++ b/Assignments/Assignment6/Assignment_6.html
@@ -58,6 +58,10 @@
 
 				</div><!-- Sketch Holder Ends Here -->
 
+                <h2>Description</h2>
+
+                <p>For this assignment, we had to work on animation using p5. We had to choice to either use a logo/drawing we made from previous assignments or a new drawing. I went with using the logo I made for the 3rd assignment. Instead of explaining the process on how I made this, I'll upload the sketch I did in class for it.</p>
+
 	               <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
