--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-			<h2>Home</h2>
+			<h2>Welcome to My Class Website</h2>
 
 			<div class="carousel slide" data-ride="carousel" id="featured-work">
 				
@@ -65,6 +65,14 @@
 
 
 					<li data-slide-to="3" data-target="#featured-work"></li>
+
+					<li data-slide-to="4" data-target="#featured-work"></li>
+
+					<li data-slide-to="5" data-target="#featured-work"></li>
+
+					<li data-slide-to="6" data-target="#featured-work"></li>
+
+					<li data-slide-to="7" data-target="#featured-work"></li>
 
 				</ol>
 
@@ -111,19 +119,64 @@
 							<p class="carousel-text">Interactive Design</p>
 						</div>
 					</div>
+
+					<div class="item"><!-- Slide 5 -->
+						<img alt="..." src="img/assignment5.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #5</h3>
+
+							<p class="carousel-text">Drawing With Logic</p>
+						</div>
+					</div>
+
+
+
+					<div class="item"><!-- Slide 6 -->
+						<img alt="..." src="img/assignment6.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #6</h3>
+
+							<p class="carousel-text">Animation</p>
+						</div>
+					</div>
+
+					<div class="item"><!-- Slide 7 -->
+						<img alt="..." src="img/assignment7.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Assignment #7</h3>
+
+							<p class="carousel-text">Loops</p>
+						</div>
+					</div>
+
+					<div class="item"><!-- Slide 8 -->
+						<img alt="..." src="img/midterm.png">
+
+						<div class="carousel-caption">
+							<h3 class="carousel-header">Midterm</h3>
+
+							<p class="carousel-text">Generative Design</p>
+						</div>
+					</div>
+
+
+
+
 				</div>
 				<!-- Controls -->
 				 <a class="left carousel-control" data-slide="prev" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-left"></span> <span class="sr-only">Previous</span></a> <a class="right carousel-control" data-slide="next" href="#featured-work" role="button"><span aria-hidden="true" class="glyphicon glyphicon-chevron-right"></span> <span class="sr-only">Next</span></a>
 			</div>
 
 			<div class="text">
-				<h3>Welcome to My Class Website</h3>
 
-				<p>This website will be used to post my assignments for my class MMP 210</p>
 
-				<p>Now for some dummy text</p>
+				<p>This website will be used to post my class assignments for MMP 210</p>
 
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a sapien at dui ultrices euismod. In bibendum sem ac purus luctus, in semper lacus euismod. Nunc arcu risus, ultricies quis felis quis, tempus commodo odio. In eget congue risus. Vivamus sit amet nibh consectetur, varius est sit amet, condimentum libero. Sed consectetur tempus eros, bibendum eleifend sem scelerisque vel. Mauris libero purus, accumsan sit amet venenatis at, interdum sed libero. Aliquam erat volutpat. Vivamus fermentum dolor orci, ac congue nulla aliquam non. Curabitur metus est, sollicitudin eu magna et, efficitur cursus mauris. Maecenas mollis sem nunc, at auctor metus dapibus in. Donec aliquet rutrum magna vitae consectetur. Morbi tempus sem in mauris efficitur porttitor. Nulla auctor vel quam sit amet tempus. In nec efficitur ligula. Phasellus nec diam ut purus pharetra mollis sed quis augue.</p>
+                <p>Also, all of my p5 Sketches are now responsive!!</p>
+
 
 			</div><!-- Text Ends Here -->
 		</div><!-- /.container -->
