--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -94,9 +94,16 @@
 					<b>Generative Design</b></span></a>
                 </div>
 
-			</div>
+<!--
+				<div class="col-sm-6 assignment-hover">
+					<a href="Final/Final.html"><img alt="Final" src="img/midterm.png"> <span class="caption">Final<br>
+					<b>idk</b></span></a>
+                </div>
+-->
+
+			</div><!-- Assignment Boxes End Here -->
 		</div><!-- /.container -->
-	</div>
+	</div><!-- Animsition Ends Here -->
 	<div class="footer">
 		<footer class="footer">
 			<div class="container">
