--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -80,17 +80,17 @@
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment6.png"> <span class="caption">Assignment #6<br>
+					<a href="Assignment6/Assignment_6.html"><img alt="Assignment 6" src="img/assignment6.gif"> <span class="caption">Assignment #6<br>
 					<b>Animation</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
 					<a href="Assignment7/Assignment_7.html"><img alt="Assignment 7" src="img/assignment7.png"> <span class="caption">Assignment #7<br>
-					<b>Loops</b></span></a>
+					<b>Loops & Functions</b></span></a>
                 </div>
 
 				<div class="col-sm-6 assignment-hover">
-					<a href="Midterm/Midterm.html"><img alt="Midterm" src="img/midterm.png"> <span class="caption">Midterm<br>
+					<a href="Midterm/Midterm.html"><img alt="Midterm" src="img/midterm.gif"> <span class="caption">Midterm<br>
 					<b>Generative Design</b></span></a>
                 </div>
 
