--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 
 					<div class="item"><!-- Slide 6 -->
-						<img alt="..." src="img/assignment6.png">
+						<img alt="..." src="img/assignment6.gif">
 
 						<div class="carousel-caption">
 							<h3 class="carousel-header">Assignment #6</h3>
@@ -153,7 +153,7 @@
 					</div>
 
 					<div class="item"><!-- Slide 8 -->
-						<img alt="..." src="img/midterm.png">
+						<img alt="..." src="img/midterm.gif">
 
 						<div class="carousel-caption">
 							<h3 class="carousel-header">Midterm</h3>
