--- a/index.html
+++ b/index.html
@@ -173,9 +173,30 @@
 			<div class="text">
 
 
-				<p>This website will be used to post my class assignments for MMP 210</p>
+				<p>This website will be used to post my class assignments for my MMP 210 class</p>
 
                 <p>Also, all of my p5 Sketches are now responsive!!</p>
+
+                <h2>List of Assignments</h2>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment1/self_portrait.html">Assignment 1</a> : Self Portrait</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment2/Assignment_2.html">Assignment 2</a> : Variables</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment3/Assignment_3.html">Assignment 3</a> : Logo</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment4/Assignment_4.html">Assignment 4</a> : Interactive Design</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment5/Assignment_5.html">Assignment 5</a> : Drawing with Logic</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment6/Assignment_6.html">Assignment 6</a> : Animation</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Assignment7/Assignment_7.html">Assignment 7</a> : Loops & Functions</p>
+
+                <p><a class="animsition-link, link" href="Assignments/Midterm/Midterm.html">Midterm</a> : Generative Design</p>
+
+
+                
 
 
 			</div><!-- Text Ends Here -->
