--- a/Assignments/Final/Final.html
+++ b/Assignments/Final/Final.html
@@ -5,13 +5,13 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
-	<link href="../../../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
+	<link href="../../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
 
-	<link href="../../../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
+	<link href="../../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
 	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
 </head>
 
@@ -32,16 +32,16 @@
 						<ul class="nav navbar-nav">
 
 							<li>
-								<a class="animsition-link" href="../../../index.html">Home</a>
+								<a class="animsition-link" href="../../index.html">Home</a>
 							</li>
 
 
 							<li class="active">
-								<a class="animsition-link" href="../../assignments.html">Assignments<span class="sr-only">(current)</span></a>
+								<a class="animsition-link" href="../assignments.html">Assignments<span class="sr-only">(current)</span></a>
 							</li>
 
 							<li>
-								<a class="animsition-link" href="../../../About/about.html">About</a>
+								<a class="animsition-link" href="../../About/about.html">About</a>
 							</li>
 
 						</ul>
@@ -49,7 +49,7 @@
 				</div><!-- /.container-fluid -->
 			</nav>
 
-			<h2>In Class Assignment: Functions</h2>
+			<h2>Final: Interactive Media Player</h2>
 
 			<div class="text">
 				<div id="sketch-holder">
@@ -58,11 +58,9 @@
 
                 <h2>Description</h2>
 
-                <p>For this assignment, we had to rewrite the code for the window assignment and make it as a function of it's own. It was complicated at first since I used math in the hardcoded values instead of the arguments. Then I got the hang of how it's supposed to be done.</p>
+                <p></p>
 
-                <p><a class="animsition-link, link" href="../Assignment_7.html">See Loops Version Here</a>  </p>
-
-                <p class="return"><a class="animsition-link" href="../../assignments.html">Return to Assignments</a></p>
+                <p class="return"><a class="animsition-link" href="../assignments.html">Return to Assignments</a></p>
 
 			</div><!-- Text Ends Here -->
 		</div><!-- /.container -->
@@ -74,14 +72,19 @@
                 </div>
             </footer>
         </div>
-        <script src="js/p5.min.js"></script><!-- For Sketch -->
-        <script src="js/sketch.js"></script> <!-- Sketch -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script><!-- jQuery -->
-		<script src="../../../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
-		<script src="../../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
-		<script src="../../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
-	</div>
+        <!-- For Sketch -->
+        <script src="js/p5.min.js"></script>
+        <script src="js/p5.dom.min.js"></script>
+        <script src="js/p5.sound.js"></script>
+        <!-- Sketch -->
+        <script src="js/sketch.js"></script>
+        <!-- jQuery -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+		<script src="../../Bootstrap/js/bootstrap.min.js"></script><!-- Bootstrap js -->
+		<script src="../../animsition/js/animsition.min.js"></script><!-- Animsition js --> 
+		<script src="../../animsition/js/fade.js"></script><!-- Calls Fade Animsition -->
+	</div>
     <!-- Responsive Sketch -->
     <script type="text/javascript">
         window.onload = () => {
