--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -5,14 +5,13 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
-	<link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
 
+	<link href="../Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-
 	<link href="../animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
-	<link href="css/styles.css" rel="stylesheet"><!-- My Css -->
+	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
 </head>
 <body>
 	<header>
@@ -47,8 +46,6 @@
 			</nav>
 
 			<h2>Assignments</h2>
-
-            <!-- Caption when hovering over image -->
             
 			<div class="container-fluid assignment-container" id="assignments">
 				<div class="col-sm-6 assignment-hover">
@@ -56,18 +53,15 @@
 					<b>Self Portrait</b></span></a>
 				</div>
 
-
 				<div class="col-sm-6 assignment-hover">
 					<a href="Assignment2/Assignment_2.html"><img alt="Assignment 2" src="img/assignment2.png"> <span class="caption">Assignment #2<br>
 					<b>Variables</b></span></a>
 				</div>
 
-
 				<div class="col-sm-6 assignment-hover">
 					<a href="Assignment3/Assignment_3.html"><img alt="Assignment 3" src="img/assignment3.png"> <span class="caption">Assignment #3<br>
 					<b>Logo</b></span></a>
                 </div>
-
 
 				<div class="col-sm-6 assignment-hover">
 					<a href="Assignment4/Assignment_4.html"><img alt="Assignment 4" src="img/assignment4.png"> <span class="caption">Assignment #4<br>
@@ -94,12 +88,12 @@
 					<b>Generative Design</b></span></a>
                 </div>
 
-<!--
-				<div class="col-sm-6 assignment-hover">
-					<a href="Final/Final.html"><img alt="Final" src="img/midterm.png"> <span class="caption">Final<br>
-					<b>idk</b></span></a>
+				<div class="center col-sm-6 assignment-hover">
+					<a href="Final/Final.html"><img alt="Final" src="img/assignment2.png"> <span class="caption">Final<br>
+					<b>Interactive Media Player</b></span></a>
                 </div>
--->
+
+                <h2><a id="back-top" title="Back to top" href="#">Back To Top</a></h2>
 
 			</div><!-- Assignment Boxes End Here -->
 		</div><!-- /.container -->
