--- a/index.html
+++ b/index.html
@@ -5,21 +5,20 @@
 	<meta content="IE=edge" http-equiv="X-UA-Compatible">
 	<meta content="width=device-width, initial-scale=1" name="viewport">
 	<title>MMP 210 Homepage</title>
-	<link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet"><!-- Bootstrap CSS -->
-
+    <!-- Bootstrap CSS -->
+	<link href="Bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Saira" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
-
-	<link href="animsition/css/animsition.min.css" rel="stylesheet"><!-- Animsition CSS -->
-	<link href="css/styles.css" rel="stylesheet"><!-- My CSS -->
+    <!-- Animsition CSS -->
+	<link href="animsition/css/animsition.min.css" rel="stylesheet">
+    <!-- My CSS -->
+	<link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
-
 	<header>
 		<h1>Welcome to MMP 210</h1>
 	</header>
-
 	<div class="animsition">
 		<div class="container">
 			<nav class="navbar navbar-default">
