Fixed hover delay

--- a/Assignments/assignments.html
+++ b/Assignments/assignments.html
@@ -88,14 +88,18 @@
 					<b>Generative Design</b></span></a>
                 </div>
 
+			</div><!-- Assignment Boxes End Here -->
+
+			<div class="container-fluid assignment-container" id="assignments">
+                <!-- Seperated col Here to Avoid Delays when Hovering -->                
 				<div class="center col-sm-6 assignment-hover">
 					<a href="Final/Final.html"><img alt="Final" src="img/assignment2.png"> <span class="caption">Final<br>
 					<b>Interactive Media Player</b></span></a>
                 </div>
+            </div>
 
-                <h2><a id="back-top" title="Back to top" href="#">Back To Top</a></h2>
+            <h2><a id="back-top" title="Back to top" href="#">Back To Top</a></h2>
 
-			</div><!-- Assignment Boxes End Here -->
 		</div><!-- /.container -->
 	</div><!-- Animsition Ends Here -->
 	<div class="footer">
